tests/lean/match_bug.lean.expected.out
match_bug.lean:3:6: error: invalid occurrence of variable 'bar' in the pattern
